Agregando PR table

--- a/views/index.erb
+++ b/views/index.erb
@@ -8,5 +8,16 @@
 	<form action="/pull_requests/new", action="GET">
 		<input type="submit" name="crear-pr" value="crear-pr">
 	</form>
+	<table>
+		<thead>
+			<td>Creador</td>
+			<td>Jira</td>
+			<td>PR</td>
+			<td>Critico?</td>
+			<td>Seguridad?</td>
+			<td>Dependencias</td>
+			<td>Probado-stg?</td>
+		</thead>
+	</table>
 </body>
 </html>
