--- a/views/index.erb
+++ b/views/index.erb
@@ -5,8 +5,8 @@
 </head>
 <body>
 	<h1>Lista de Pull Requests</h1>	
-	<form action="/pull_request", action="GET">
-		<input type="submit" name="Crear PR" value="crear">
+	<form action="/pull_requests/new", action="GET">
+		<input type="submit" name="crear-pr" value="crear-pr">
 	</form>
 </body>
 </html>
