Adding record to PR list

--- a/views/index.erb
+++ b/views/index.erb
@@ -10,14 +10,27 @@
 	</form>
 	<table>
 		<thead>
-			<td>Creador</td>
-			<td>Jira</td>
-			<td>PR</td>
-			<td>Critico?</td>
-			<td>Seguridad?</td>
-			<td>Dependencias</td>
-			<td>Probado-stg?</td>
+			<tr>
+				<td>Creador</td>
+				<td>Jira</td>
+				<td>PR</td>
+				<td>Critico?</td>
+				<td>Seguridad?</td>
+				<td>Dependencias</td>
+				<td>Probado-stg?</td>
+			</tr>
 		</thead>
+		<tbody>
+			<tr>
+				<td>henry</td>
+				<td>http://jira.com</td>
+				<td>http://github.com</td>
+				<td>NO CRITICO</td>
+				<td>SI SEGURIDAD</td>
+				<td>NINGUNA</td>
+				<td>PROBADO STG</td>
+			</tr>		
+		</tbody>
 	</table>
 </body>
 </html>
