--- a/views/index.erb
+++ b/views/index.erb
@@ -21,15 +21,17 @@
 			</tr>
 		</thead>
 		<tbody>
+			<% PullRequest.all.each do |pr|%>
 			<tr>
-				<td>henry</td>
-				<td>http://jira.com</td>
-				<td>http://github.com</td>
-				<td>NO CRITICO</td>
-				<td>SI SEGURIDAD</td>
-				<td>NINGUNA</td>
-				<td>PROBADO STG</td>
-			</tr>		
+				<td><%= pr.creador %></td>
+				<td><%= pr.link_github %></td>
+				<td><%= pr.link_jira %></td>
+				<td><%= pr.critico %></td>
+				<td><%= pr.revision_seguridad %></td>
+				<td><%= pr.dependencias %></td>			
+				<td><%= pr.revision_staging %></td>
+			</tr>
+			<% end %>
 		</tbody>
 	</table>
 </body>
