--- a/views/index.erb
+++ b/views/index.erb
@@ -2,13 +2,14 @@
 <html>
 <head>
 	<title>Kinapay</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body>
 	<h1>Lista de Pull Requests</h1>	
 	<form action="/pull_requests/new", action="GET">
 		<input type="submit" name="crear-pr" value="crear-pr">
 	</form>
-	<table>
+	<table class="table">
 		<thead>
 			<tr>
 				<td>Creador</td>
