--- a/views/pull_request.erb
+++ b/views/pull_request.erb
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Kinpay</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body>
 <h1>Crear Pull Request</h1>
@@ -11,30 +12,38 @@
 	<h2><%=@error %></h2>
 <% end %>
 <form method="POST" action="/pull_requests">
-	Creador*
-	<input type="text" name="creador" />
-	<br></br>
-	Link Github*
-	<input type="text" name="link_github" />
-	<br></br>
-	Link JIRA*
-	<input type="text" name="link_jira" />
-	<br></br>
-	Es critico?
-	<input type="checkbox" name="critico" />
-	<br></br>
-	Necesita revision de seguridad?
-	<input type="checkbox" name="revision_seguridad" />
-	<br></br>
-	Fue revisado en staging?
-	<input type="checkbox" name="revision_staging" />
-	<br></br>
-	Dependencias
-	<input type="text" name="dependencias" />
-	<br/>
-	<br/>
-	<input type="submit" name="guardar" value="guardar">
-	<br/>
+	<div class="form-group">
+		<label class="col-sm-2 control-label">Creador*</label>
+		<input type="text" name="creador" />
+	</div>
+	<div class="form-group">
+		<label class="col-sm-2 control-label">Link Github*</label>
+		<input type="text" name="link_github" />
+	</div>
+	<div class="form-group">
+		<label class="col-sm-2 control-label">Link JIRA*</label>
+		<input type="text" name="link_jira" />
+	</div>
+	<div class="form-group">
+		<label class="col-sm-2 control-label">Es critico?</label>
+		<input type="checkbox" name="critico" />
+	</div>
+	<div class="form-group">
+		<label class="col-sm-2 control-label">Necesita revision de seguridad?</label>
+		<input type="checkbox" name="revision_seguridad" />
+	</div>
+	</br>
+	<div class="form-group">
+		<label class="col-sm-2 control-label">Fue revisado en staging?</label>
+		<input type="checkbox" name="revision_staging" />
+	</div>
+	<div class="form-group">
+		<label class="col-sm-2 control-label">Dependencias</label>
+		<input type="text" name="dependencias" />
+	</div>
+	<div class="form-group">
+		<input type="submit" name="guardar" value="guardar">
+	<div/>
 	<br/>
 	* campos obligatorios
 </form>
