--- a/views/detail.erb
+++ b/views/detail.erb
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body>
+	<div class="container">
 	<h1>Detalle PR #<%= @index %></h1>
 	<dl class="dl-horizontal">
 
@@ -19,6 +20,6 @@
 		<dt>Probado stg:</dt> <dd><%= @pr.revision_staging ? "SI" : "NO" %> PROBADO</dd>
 	</dl>
 	<a href="/" id="volver">volver</a>
-
+	</div>
 </body>
 </html>
