--- a/views/index.erb
+++ b/views/index.erb
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Kinapay</title>
+	<title>Kipanay</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body>
+<div class="container">
 	<h1>Lista de Pull Requests</h1>	
 	<form action="/pull_requests/new", action="GET">
 		<input type="submit" name="crear-pr" value="crear-pr">
@@ -39,5 +40,6 @@
 			<% end %>
 		</tbody>
 	</table>
+	</div>
 </body>
 </html>
