--- a/views/pull_request.erb
+++ b/views/pull_request.erb
@@ -5,9 +5,10 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body>
+<div class="container">
 <h1>Crear Pull Request</h1>
 <% if @success %>
-	<h2>Pull Request creado</h2>
+		<div class="alert-success">Pull Request creado</div>
 <% else %>
 	<h2><%=@error %></h2>
 <% end %>
@@ -50,6 +51,6 @@
 <br/>
 
 <a href="/" id="volver">volver</a>
-
+</div>
 </body>
 </html>
