--- a/views/detail.erb
+++ b/views/detail.erb
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body>
+<div class="container">
 	<div class="container">
 	<h1>Detalle PR #<%= @index %></h1>
 	<dl class="dl-horizontal">
@@ -21,5 +22,6 @@
 	</dl>
 	<a href="/" id="volver">volver</a>
 	</div>
+</div>
 </body>
 </html>
