--- a/views/review.erb
+++ b/views/review.erb
@@ -2,8 +2,10 @@
 <html>
 <head>
 	<title></title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body>
+<div class="container">
 	<h1>Revision de Pull Request #<%= @index %></h1>
 	<% if @success %>
 		<h2>Pull Request Revisado</h2>
@@ -46,5 +48,6 @@
 		<input type="submit" name="Aprobar" value="aprobar">
 		<input type="submit" name="Denegar" value="denegar">
 	</form>
+</div>
 </body>
 </html>
