--- a/views/detail.erb
+++ b/views/detail.erb
@@ -6,6 +6,7 @@
 </head>
 <body>
 <div class="container">
+<h2><img src="/logo.png" width="50px" />  Kipanay </h2>
 	<div class="container">
 	<h1>Detalle PR #<%= @index %></h1>
 	<dl class="dl-horizontal">
