--- a/views/index.erb
+++ b/views/index.erb
@@ -6,6 +6,7 @@
 </head>
 <body>
 <div class="container">
+	<h2><img src="/logo.png" width="50px" />  Kipanay </h2>
 	<h1>Lista de Pull Requests</h1>	
 	<form action="/pull_requests/new", action="GET">
 		<input type="submit" name="crear-pr" value="crear-pr">
