--- a/views/pull_request.erb
+++ b/views/pull_request.erb
@@ -6,6 +6,7 @@
 </head>
 <body>
 <div class="container">
+<h2><img src="/logo.png" width="50px" />  Kipanay </h2>
 <h1>Crear Pull Request</h1>
 <% if @success %>
 		<div class="alert-success">Pull Request creado</div>
